# KeyGuard

./: README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
KeyGuard/: KeyGuard.py
changelog/: update_notes-v1.3.2.md  update_notes-v1.5.2.md  update_notes.md
docs/: KeyGuard.webm
keyguard/: __init__.py  __main__.py  config.py  logging_setup.py  main.py  paths.py
keyguard/crypto/: __init__.py  engine.py  formats.py
keyguard/storage/: __init__.py  backend.py
keyguard/ui/: __init__.py  app.py  dialogs.py  ttk_compat.py  views.py
keyguard/util/: __init__.py  memory.py  platform_harden.py  rate_limit.py
keyguard/vault/: __init__.py  manager.py  models.py
tests/: conftest.py  test_crypto.py  test_formats.py  test_memory.py  test_migration.py  test_password_gen.py  test_rate_limit.py  test_storage.py  test_ttk_compat.py  test_vault.py
